// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-timepicker-beta #render interval should render component as expected (1) 1`] = `"<gux-form-field-timepicker-beta interval=\\"15\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render interval should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:15">
              <!---->
              <div title="12:15">
                <span style="display: none;">
                  12:15
                </span>
                12:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:30">
              <!---->
              <div title="12:30">
                <span style="display: none;">
                  12:30
                </span>
                12:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:45">
              <!---->
              <div title="12:45">
                <span style="display: none;">
                  12:45
                </span>
                12:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:15">
              <!---->
              <div title="1:15">
                <span style="display: none;">
                  1:15
                </span>
                1:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:30">
              <!---->
              <div title="1:30">
                <span style="display: none;">
                  1:30
                </span>
                1:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:45">
              <!---->
              <div title="1:45">
                <span style="display: none;">
                  1:45
                </span>
                1:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:15">
              <!---->
              <div title="2:15">
                <span style="display: none;">
                  2:15
                </span>
                2:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:30">
              <!---->
              <div title="2:30">
                <span style="display: none;">
                  2:30
                </span>
                2:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:45">
              <!---->
              <div title="2:45">
                <span style="display: none;">
                  2:45
                </span>
                2:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:15">
              <!---->
              <div title="3:15">
                <span style="display: none;">
                  3:15
                </span>
                3:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:30">
              <!---->
              <div title="3:30">
                <span style="display: none;">
                  3:30
                </span>
                3:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:45">
              <!---->
              <div title="3:45">
                <span style="display: none;">
                  3:45
                </span>
                3:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:15">
              <!---->
              <div title="4:15">
                <span style="display: none;">
                  4:15
                </span>
                4:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:30">
              <!---->
              <div title="4:30">
                <span style="display: none;">
                  4:30
                </span>
                4:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:45">
              <!---->
              <div title="4:45">
                <span style="display: none;">
                  4:45
                </span>
                4:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:15">
              <!---->
              <div title="5:15">
                <span style="display: none;">
                  5:15
                </span>
                5:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:30">
              <!---->
              <div title="5:30">
                <span style="display: none;">
                  5:30
                </span>
                5:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:45">
              <!---->
              <div title="5:45">
                <span style="display: none;">
                  5:45
                </span>
                5:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:15">
              <!---->
              <div title="6:15">
                <span style="display: none;">
                  6:15
                </span>
                6:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:30">
              <!---->
              <div title="6:30">
                <span style="display: none;">
                  6:30
                </span>
                6:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:45">
              <!---->
              <div title="6:45">
                <span style="display: none;">
                  6:45
                </span>
                6:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:15">
              <!---->
              <div title="7:15">
                <span style="display: none;">
                  7:15
                </span>
                7:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:30">
              <!---->
              <div title="7:30">
                <span style="display: none;">
                  7:30
                </span>
                7:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:45">
              <!---->
              <div title="7:45">
                <span style="display: none;">
                  7:45
                </span>
                7:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:15">
              <!---->
              <div title="8:15">
                <span style="display: none;">
                  8:15
                </span>
                8:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:30">
              <!---->
              <div title="8:30">
                <span style="display: none;">
                  8:30
                </span>
                8:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:45">
              <!---->
              <div title="8:45">
                <span style="display: none;">
                  8:45
                </span>
                8:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:15">
              <!---->
              <div title="9:15">
                <span style="display: none;">
                  9:15
                </span>
                9:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:30">
              <!---->
              <div title="9:30">
                <span style="display: none;">
                  9:30
                </span>
                9:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:45">
              <!---->
              <div title="9:45">
                <span style="display: none;">
                  9:45
                </span>
                9:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:15">
              <!---->
              <div title="10:15">
                <span style="display: none;">
                  10:15
                </span>
                10:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:30">
              <!---->
              <div title="10:30">
                <span style="display: none;">
                  10:30
                </span>
                10:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:45">
              <!---->
              <div title="10:45">
                <span style="display: none;">
                  10:45
                </span>
                10:45
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:15">
              <!---->
              <div title="11:15">
                <span style="display: none;">
                  11:15
                </span>
                11:15
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:30">
              <!---->
              <div title="11:30">
                <span style="display: none;">
                  11:30
                </span>
                11:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:45">
              <!---->
              <div title="11:45">
                <span style="display: none;">
                  11:45
                </span>
                11:45
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-timepicker-beta #render interval should render component as expected (2) 1`] = `"<gux-form-field-timepicker-beta interval=\\"30\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render interval should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:30">
              <!---->
              <div title="12:30">
                <span style="display: none;">
                  12:30
                </span>
                12:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:30">
              <!---->
              <div title="1:30">
                <span style="display: none;">
                  1:30
                </span>
                1:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:30">
              <!---->
              <div title="2:30">
                <span style="display: none;">
                  2:30
                </span>
                2:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:30">
              <!---->
              <div title="3:30">
                <span style="display: none;">
                  3:30
                </span>
                3:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:30">
              <!---->
              <div title="4:30">
                <span style="display: none;">
                  4:30
                </span>
                4:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:30">
              <!---->
              <div title="5:30">
                <span style="display: none;">
                  5:30
                </span>
                5:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:30">
              <!---->
              <div title="6:30">
                <span style="display: none;">
                  6:30
                </span>
                6:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:30">
              <!---->
              <div title="7:30">
                <span style="display: none;">
                  7:30
                </span>
                7:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:30">
              <!---->
              <div title="8:30">
                <span style="display: none;">
                  8:30
                </span>
                8:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:30">
              <!---->
              <div title="9:30">
                <span style="display: none;">
                  9:30
                </span>
                9:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:30">
              <!---->
              <div title="10:30">
                <span style="display: none;">
                  10:30
                </span>
                10:30
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:30">
              <!---->
              <div title="11:30">
                <span style="display: none;">
                  11:30
                </span>
                11:30
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-timepicker-beta #render interval should render component as expected (3) 1`] = `"<gux-form-field-timepicker-beta interval=\\"60\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render interval should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (1) 1`] = `"<gux-form-field-timepicker-beta hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (2) 1`] = `"<gux-form-field-timepicker-beta label-position=\\"above\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (3) 1`] = `"<gux-form-field-timepicker-beta label-position=\\"beside\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (4) 1`] = `"<gux-form-field-timepicker-beta label-position=\\"screenreader\\" hydrated=\\"\\"> <input slot=\\"input\\" type=\\"time\\" id=\\"gux-form-field-input-i\\"> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-timepicker-beta>"`;

exports[`gux-form-field-timepicker-beta #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input">
      <div aria-disabled="false" class="gux-timepicker">
        <div class="gux-input-time">
          <input aria-label="Input hours" class="gux-input-time-hours" max="12" min="1" type="number">
          <span class="gux-time-separator">
            :
          </span>
          <input aria-label="Input minutes" class="gux-input-time-minutes" max="59" min="00" type="number">
          <button aria-label="AM selected, click to toggle" class="gux-input-time-am-pm-selector" type="button">
            AM
          </button>
          <button aria-label="Toggle suggested times" class="gux-clock-button" type="button">
            <gux-icon hydrated="" icon-name="clock-outline"></gux-icon>
          </button>
        </div>
        <div aria-label="Time options open: false" class="gux-time-options">
          <div class="gux-time-options-list">
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="12:00">
              <!---->
              <div title="12:00">
                <span style="display: none;">
                  12:00
                </span>
                12:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="1:00">
              <!---->
              <div title="1:00">
                <span style="display: none;">
                  1:00
                </span>
                1:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="2:00">
              <!---->
              <div title="2:00">
                <span style="display: none;">
                  2:00
                </span>
                2:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="3:00">
              <!---->
              <div title="3:00">
                <span style="display: none;">
                  3:00
                </span>
                3:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="4:00">
              <!---->
              <div title="4:00">
                <span style="display: none;">
                  4:00
                </span>
                4:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="5:00">
              <!---->
              <div title="5:00">
                <span style="display: none;">
                  5:00
                </span>
                5:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="6:00">
              <!---->
              <div title="6:00">
                <span style="display: none;">
                  6:00
                </span>
                6:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="7:00">
              <!---->
              <div title="7:00">
                <span style="display: none;">
                  7:00
                </span>
                7:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="8:00">
              <!---->
              <div title="8:00">
                <span style="display: none;">
                  8:00
                </span>
                8:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="9:00">
              <!---->
              <div title="9:00">
                <span style="display: none;">
                  9:00
                </span>
                9:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="10:00">
              <!---->
              <div title="10:00">
                <span style="display: none;">
                  10:00
                </span>
                10:00
              </div>
            </gux-option>
            <gux-option class="gux-time-option" hydrated="" tabindex="0" title="11:00">
              <!---->
              <div title="11:00">
                <span style="display: none;">
                  11:00
                </span>
                11:00
              </div>
            </gux-option>
          </div>
        </div>
      </div>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;
